# _Zadania_2

./: CMakeLists.txt  Zad_1.c  Zad_2_.c  Zad_3_.c  Zad_4_.c  main.c
